# py_wfm_api

./: .gitignore  README.md  example.py  pyproject.toml
.hooks/: pre-push
py_wfm_api/: __init__.py
py_wfm_api/api/: __init__.py  auctions.py  auth.py  core.py  items.py  lich_weapons.py  orders.py  others.py  reviews.py  rivens.py  sister_weapons.py  statistics.py  users.py
py_wfm_api/objects/: __init__.py  auction.py  categories.py  item.py  lich_weapons.py  order.py  other.py  riven.py  user.py  utils.py
scripts/: install_hooks.sh
